plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'com.github.NexTach'
version = 'v1.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        create('maven', MavenPublication) {
            from components.java
            groupId = 'com.github.NexTach'
            artifactId = 'mega-method'
            version = project.version.toString()
        }
    }
}
